--- a/clue-for-you-front-end/main.css
+++ b/clue-for-you-front-end/main.css
@@ -9,7 +9,7 @@ body {
 /* //////// Header /////////// */
 
 nav {
-    background-color: lightseagreen;
+    background-color: #0E0E16;
     padding: 10px 0;
     display: flex;
     flex-direction: row;
@@ -19,6 +19,12 @@ nav {
 .title {
     margin: 0 0 0 30px;
     font-size: 50px;
+    color: white;
+}
+
+.title a {
+    text-decoration: none;
+    color: white;
 }
 
 .navlist {
@@ -35,5 +41,91 @@ nav {
     margin: 0 50px 0 0;
     font-size: 20px;
     vertical-align: middle;
+    color: white !important;
 }
 
+.nav-item a {
+    text-decoration: none;
+    color: white;
+}
+
+/* //////// Landing Page /////////// */
+
+.browse-div {
+    height: 80vh;
+    width: 48.5vw;
+    background-color: lightseagreen;
+    margin: 1% 0.5% 1% 1%;
+}
+
+.make-your-own-div {
+    height: 80vh;
+    width: 48.5vw;
+    background-color: #E4B224;
+    margin: 1% 1% 1% 0.5%;
+}
+
+.landing-page-buttons {
+    display: flex;
+
+}
+
+.welcome {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
+.parallax {
+    height: 300px;
+    width: 300px;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 50%;
+    background: #0E0E16;
+    color: #fff;
+    margin-top: 20%;
+}
+
+.parallax:hover {
+    
+}
+
+.options {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 140px;
+}
+
+.welcome-header {
+    margin: 120px 10px 5px 5px;
+    text-align: center;
+}
+
+.subheader {
+    margin: 10px 10px 5px 5px;
+    text-align: center;
+}
+
+
+
+/* //////// Footer /////////// */
+
+footer {
+    background-color: #0E0E16;
+    width: 100%;
+    height: 100px;
+}
+
+.copyright {
+    text-align: center;
+    margin: 0;
+    color: white;
+}
+
+.one {
+    height: 100px;
+    width: 100px;
+    color: red;
+}
