--- a/clue-for-you-front-end/public/main.css
+++ b/clue-for-you-front-end/public/main.css
@@ -108,6 +108,52 @@ nav {
     text-align: center;
 }
 
+/* //////// Browse Page /////////// */
+
+
+.hvr-forward {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.hvr-forward:hover, .hvr-forward:focus, .hvr-forward:active {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+}
+
+.categories {
+    padding: 10px 0 10px 20px;
+    background-color: #E4B224;
+    width: 400px;
+}
+
+
+aside {
+    width: 500px;
+    background-color: #E4B224;
+}
+
+.picture-clue {
+    height: 200px;
+    margin: 40px;
+}
+
+.browse-main {
+    display: flex;
+}
+
+.browse-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
 
 /* //////// Footer /////////// */
@@ -116,6 +162,7 @@ footer {
     background-color: #0E0E16;
     width: 100%;
     height: 100px;
+    bottom: 0;
 }
 
 .copyright {
