--- a/clue-for-you-front-end/views/browse.html
+++ b/clue-for-you-front-end/views/browse.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Browse - Clue For You</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../public/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
 </head>
 <body>
@@ -40,12 +40,12 @@
             </div>
         </aside>
         <section class="browse-section">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
-            <img class="picture-clue" src="images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
+            <img class="picture-clue" src="../public/images/IMG_4023.jpg" alt="">
         </section>
     </main>
     <footer>
