--- a/clue-for-you-front-end/views/landing.html
+++ b/clue-for-you-front-end/views/landing.html
@@ -19,6 +19,15 @@
         </nav>
     </header>
     <main>
+        <div class="sign-up-div">
+            <form class="sign-up-form" action="POST">
+                <input class='sign-up-input' type="text" placeholder="First Name">
+                <input class='sign-up-input' type="text" placeholder="Last Name">
+                <input class='sign-up-input' type="text" placeholder="Email">
+                <input class='sign-up-input' type="text" placeholder="Password">
+                <input class='sign-up-input' type="text" placeholder="Confirm Password">
+            </form>
+        </div>
         <div id="scene" class="welcome">
             <div data-depth="0.3" class="parallax">
                     <h2 class="welcome-header">Welcome to ClueForYou</h2>
