styling sign up form

--- a/clue-for-you/public/main.css
+++ b/clue-for-you/public/main.css
@@ -54,7 +54,7 @@ nav {
 
 
 .sign-up-div {
-    background-color: #0E0E16;
+    background-color: lightseagreen;
     position: absolute;
     margin: 40px 40px 0 61%;
 }
