--- a/clue-for-you/views/profile.ejs
+++ b/clue-for-you/views/profile.ejs
@@ -3,12 +3,21 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Node File Uploads</title>
+    <title>Clue For You</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav>
+            <h1 class="title"><a href="landing.html">ClueForYou</a></h1>
+            <ul class="navlist">
+                <li class="nav-item"><a href="browse.html">Browse</a></li>
+                <li class="nav-item">Sign Up</li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <h1>File Upload</h1>
 
