--- a/clue-for-you/views/landing.ejs
+++ b/clue-for-you/views/landing.ejs
@@ -15,6 +15,7 @@
             <h1 class="title"><a href="#">ClueForYou</a></h1>
             <ul class="navlist">
                 <li class="nav-item"><a href="./browse">Browse</a></li>
+                <li class="nav-item"><a href="./new-post">Add Post</a></li>
                 <li class="nav-item"><a  class="sign-up" href="#">Sign Up</a></li>
             </ul>
         </nav>
