--- a/clue-for-you/views/new-post.ejs
+++ b/clue-for-you/views/new-post.ejs
@@ -11,26 +11,35 @@
 <body>
     <header>
         <nav>
-            <h1 class="title"><a href="landing.html">ClueForYou</a></h1>
+            <h1 class="title"><a href="/">ClueForYou</a></h1>
             <ul class="navlist">
-                <li class="nav-item"><a href="browse.html">Browse</a></li>
+                <li class="nav-item"><a href="./browse">Browse</a></li>
                 <li class="nav-item">Sign Up</li>
             </ul>
         </nav>
     </header>
     <div class="container">
-        <h1>File Upload</h1>
+        <h1>New Post</h1>
 
         <%= typeof msg != 'undefined' ? msg : '' %>
 
         <form action="upload" method="POST" enctype="multipart/form-data">
             <span>File</span>
             <input name="myImage" type="file">
-            <input type="text">
+            <select name="category">
+                <option value="wc">World Cities</option>
+                <option value="uku">UK Unversities</option>
+                <option value="cof">Coffee</option>
+                <option value="lus">London Underground Stations</option>
+                <option value="4pow">4 pics one word</option>
+                <option value="kin">King's Surnames</option>
+            </select>
+            <span>Answer</span>
+            <input type="text" name="answer">
             <button type="submit">submit</button>
         </form>
         <br>
-        <img src="<%= typeof file != 'undefined' ? file : '' %>" alt="">
+        <img class="picture-clue" src="<%= typeof file != 'undefined' ? file : '' %>" alt="">
     </div>
 </body>
 </html>
