--- a/clue-for-you/views/new-post.ejs
+++ b/clue-for-you/views/new-post.ejs
@@ -34,6 +34,9 @@
                 <option value="4pow">4 pics one word</option>
                 <option value="kin">King's Surnames</option>
             </select>
+            <span>Clue</span>
+            <input type="text" name="clue">
+
             <span>Answer</span>
             <input type="text" name="answer">
             <button type="submit">submit</button>
