--- a/clue-for-you/views/header.ejs
+++ b/clue-for-you/views/header.ejs
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Clue For You</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <h1 class="title"><a href="landing.html">ClueForYou</a></h1>
+            <h1 class="title"><a href="/">ClueForYou</a></h1>
             <ul class="navlist">
-                <li class="nav-item"><a href="browse.html">Browse</a></li>
-                <li class="nav-item">Sign Up</li>
+                <li class="nav-item"><a href="./browse">Browse</a></li>
+                <li class="nav-item"><a class="new-post" href="#">Add Post</a></li>
+                <li class="nav-item"><a class="sign-up" href="#">Sign Up</a></li>
+                <li class="nav-item"><a class="log-in" href="#">Log In</a></li>
             </ul>
         </nav>
     </header>
