--- a/clue-for-you/views/browse.ejs
+++ b/clue-for-you/views/browse.ejs
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Browse - Clue For You</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
-    <script src="main.js"></script>
-</head>
-<body>
-    <header>
-        <nav>
-            <h1 class="title"><a href="/">ClueForYou</a></h1>
-            <ul class="navlist">
-                <li class="nav-item"><a href="/browse">Browse</a></li>
-                <li class="nav-item"><a href="/new-post">Add Post</a></li>
-                <li class="nav-item"><a  class="sign-up" href="#">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+<%- include('./header'); %>
     <main class="browse-main">
         <aside>
             <a href="/browse/wc" class='categories hvr-forward'>
@@ -54,14 +32,4 @@
             <!-- <img class="picture-clue" src="<%= typeof file != 'undefined' ? file : '' %>" alt=""> -->
         </section>
     </main>
-    <footer>
-        <p class="copyright">Harry Stacey &copy;</p>
-    </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src="main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-</body>
-</html>
+    <%- include('./footer'); %>
