--- a/clue-for-you/views/landing.ejs
+++ b/clue-for-you/views/landing.ejs
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Clue For You</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Aleo" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <nav>
-            <h1 class="title"><a href="#">ClueForYou</a></h1>
-            <ul class="navlist">
-                <li class="nav-item"><a href="./browse">Browse</a></li>
-                <li class="nav-item"><a class="new-post" href="#">Add Post</a></li>
-                <li class="nav-item"><a  class="sign-up" href="#">Sign Up</a></li>
-            </ul>
-        </nav>
-    </header>
+<%- include('./header'); %>
     <main>
         <div class="outer-sign-up-div">
             <div class="sign-up-div">
@@ -63,6 +42,17 @@
                 </form>
             </div>
         </div>
+        <div class="outer-log-in-div">
+            <div class="log-in-div">
+                <h1>Log In</h1>
+                <img class="cross" src="/images/cross.png" alt="">
+                <form action="user/login" method="POST" class="log-in-form">
+                    <input class="log-in-input" type="text" name="log-in-email" placeholder="Email">
+                    <input class="log-in-input" type="password" name="log-in-password">
+                    <button type="submit" class="submit">Log In</button>
+                </form>
+            </div>
+        </div>
         <div id="scene" class="welcome">
             <div data-depth="0.3" class="parallax">
                     <h2 class="welcome-header">Welcome to ClueForYou</h2>
@@ -78,14 +68,4 @@
             </a>
         </div>
     </main>
-    <footer>
-        <p class="copyright">Harry Stacey &copy;</p>
-    </footer>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-    <script src="/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
-</body>
-</html>
+    <%- include('./footer'); %>
