--- a/clue-for-you/public/main.css
+++ b/clue-for-you/public/main.css
@@ -11,6 +11,11 @@ body {
     margin: 0;
 }
 
+/* main {
+    min-height: 100%;
+    margin-bottom: -100px;
+} */
+
 /* //////// Header /////////// */
 
 nav {
@@ -54,6 +59,15 @@ nav {
     color: white;
 }
 
+.hamburger {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    z-index: 100;
+    right: 50px;
+    top: 50px;
+}
+
 /* //////// Sign Up Form /////////// */
 
 .outer-sign-up-div {
@@ -61,7 +75,7 @@ nav {
     justify-content: center;
 }
 
-.cross {
+.sign-up-cross, .log-in-cross, .new-post-cross {
     height: 20px;
     position: absolute;
     margin-left: 45%;
@@ -154,6 +168,7 @@ button {
     background-color: rgb(228,178,36, 0.7);
 }
 
+
 /* //////// Log In Page /////////// */
 
 .outer-log-in-div {
@@ -210,7 +225,7 @@ input[type="password"].log-in-input::-webkit-input-placeholder {
 /* //////// Landing Page /////////// */
 
 .browse-div {
-    height: 80vh;
+    height: 100vh;
     width: 48.5vw;
     background-color: lightseagreen;
     margin: 1% 0.5% 1% 1%;
@@ -218,7 +233,7 @@ input[type="password"].log-in-input::-webkit-input-placeholder {
 }
 
 .make-your-own-div {
-    height: 80vh;
+    height: 100vh;
     width: 48.5vw;
     background-color: #E4B224;
     margin: 1% 1% 1% 0.5%;
@@ -270,6 +285,8 @@ input[type="password"].log-in-input::-webkit-input-placeholder {
     text-align: center;
 }
 
+
+
 /* //////// Browse Page /////////// */
 
 
@@ -299,21 +316,62 @@ input[type="password"].log-in-input::-webkit-input-placeholder {
 
 
 aside {
-    width: 400px;
+    width: 30%;
     background-color: #E4B224;
 }
 
 .picture-clue {
     height: 200px;
     margin: 40px;
+    display: block;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .picture-clue-large {
-    position: absolute;
-    height: 65%;
-    left: 400px;
-    margin: 40px;
-    border: 1px solid #0E0E16;
+    height: 300px;
+    margin-bottom: 0;
+}
+
+.answer-input {
+    margin-left: 40px;
+    width: 240px;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.answer-input-div {
+    display: flex;
+}
+
+.answer-button {
+    width: 60px;
+    height: 35px;
+    margin: 0;
+    padding: 0;
+    background-color: #E4B224;
+    color: #0E0E16;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.large-img-div {
+    display: none;
+}
+
+.large-img-div-2 {
+    display: block;
+}
+
+.clue-class {
+    margin-left: 40px;
+    margin-bottom: 5px;
+}
+
+.clue {
+    margin-left: 40px;
+    margin-top: 5px;
+}
+
+.edit-button {
+    margin-left: 40px;
 }
 
 .picture-clue-visibility {
@@ -424,19 +482,32 @@ input[type="text"].new-post-input::-webkit-input-placeholder {
     padding-left: 10px;
 }
 
+.sign-up-display {
+    display: none;
+}
+
+.log-in-display {
+    display: none;
+}
+
+.new-post-display {
+    display: none;
+}
+
 
 /* //////// Footer /////////// */
 
 footer {
     background-color: #0E0E16;
     width: 100%;
-    height: 100px;
-    bottom: 0;
+    height: 200px;
+    top: 500px;
 }
 
 .copyright {
     text-align: center;
     margin: 0;
+    padding-top: 100px;
     color: white;
 }
 
@@ -444,4 +515,9 @@ footer {
     height: 100px;
     width: 100px;
     color: red;
+}
+
+@media screen and (max-width: 930px) {
+
+
 }
