--- a/clue-for-you/views/footer.ejs
+++ b/clue-for-you/views/footer.ejs
@@ -7,5 +7,10 @@
     crossorigin="anonymous"></script>
     <script src="/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script type="text/javascript">
+        var m = <% m %>
+        console.log(m);
+    </script>
+</footer>
 </body>
 </html>
