--- a/clue-for-you/views/header.ejs
+++ b/clue-for-you/views/header.ejs
@@ -11,27 +11,69 @@
 </head>
 <body>
     <header>
+        <% if (logindata === null) { %>
         <nav>
             <h1 class="title"><a href="/">ClueForYou</a></h1>
             <ul class="navlist">
                 <li class="nav-item"><a href="./browse">Browse</a></li>
-
                 <li class="nav-item"><a class="sign-up" href="#">Sign Up</a></li>
                 <li class="nav-item"><a class="log-in" href="#">Log In</a></li>
-
-                <li class="nav-item"><a class="new-post" href="#">Add Post</a></li>
-                <li class="nav-item"><a class="new-post" href="#">Log Out</a></li>
             </ul>
         </nav>
+        <% } else { %>
+        <nav>
+            <h1 class="title"><a href="/">ClueForYou</a></h1>
+            <ul class="navlist">
+                <li class="nav-item"><a href="./browse">Browse</a></li>
+                <li class="nav-item"><a class="new-post" href="#">Add Post</a></li>
+                <li class="nav-item"><a class="profile" href="/profile">Your Posts</a></li>
+                <li class="nav-item"><a class="log-out" href="/user/logout">Log Out</a></li>
+                <% } %>
+            </ul>
+        </nav>
+        <div class="hamburger-div">
+            <% if (logindata === null) { %>
+            <ul class="navlist-hamburger">
+                <li class="nav-item nav-item-hamburger"><a href="./browse">Browse</a></li>
+                <li class="nav-item nav-item-hamburger"><a class="sign-up" href="#">Sign Up</a></li>
+                <li class="nav-item nav-item-hamburger"><a class="log-in" href="#">Log In</a></li>
+            
+            <% } else { %>
+            <ul class="navlist-hamburger">
+                <li class="nav-item nav-item-hamburger"><a href="./browse">Browse</a></li>
+                <li class="nav-item nav-item-hamburger"><a class="new-post" href="#">Add Post</a></li>
+                <li class="nav-item nav-item-hamburger"><a class="profile" href="/profile">Your Posts</a></li>
+                <li class="nav-item nav-item-hamburger"><a class="log-out" href="/user/logout">Log Out</a></li>
+            </ul>
+            <% } %>
+        </div>
     </header>
     <section>
-        <img class="hamburger" src="../public/images/hamburger.png" alt="">
-        <div class="outer-sign-up-div sign-up-display">
+            <img class="hamburger" src="/images/hamburger.jpg" alt="">
+            <img class="hamburger-cross" src="/images/cross.png" alt="">
+            <% if (m !== undefined) { %>
+            <% if (m.err) { %>
+                <div class="outer-sign-up-div">
+            <% } else { %>
+                <div class="outer-sign-up-div sign-up-display">
+            <% } %>
+            <% } %>
+
             <div class="sign-up-div">
                 <h1>To upload and share picture clues, sign up here.</h1>
                 <img class="sign-up-cross" src="/images/cross.png" alt="">
                 <form class="sign-up-form" method="POST" action="/user/signup">
                     <div class="name-div">
+                            <% if (m.firstname != undefined) { %>
+                                <p class="error-firstname"><%- m.firstname %></p>
+                            <% }  if (m.lastname != undefined) { %>
+                                <p class="error-lastname"><%- m.lastname %></p>
+                            <% }  if (m.email != undefined) {%>
+                                <p class="error-email"><%- m.email %></p>
+                            <% } if (m.password != undefined) { %>
+                                <p class="error-password"><%- m.password %></p>
+                            <% } %>
+
                         <input class='sign-up-input first-name' type="text" name="firstName" placeholder="First Name">
                         <input class='sign-up-input last-name' type="text" name="lastName" placeholder="Last Name">
                     </div>
@@ -65,6 +107,30 @@
                     <input type="text" name="clue" placeholder="Give your users a clue" class="new-post-input">
                     <input type="text" name="answer" placeholder="Answer" class="new-post-input">
                     <button type="submit" class="submit">Upload</button>
+                </form>
+            </div>
+        </div>
+        <div class="outer-edit-post-div edit-post-display">
+            <div class="new-post-div">
+                <h1>Edit Your Post</h1>
+                <img class="edit-post-cross" src="/images/cross.png" alt="">
+                <%= typeof msg != 'undefined' ? msg : '' %>
+                <form  id='edit-form' method="POST" class="new-post-form">
+                    <select name="category" id="edit-category" class="new-post-category">
+                        <option class="option-class" value="wc">World Cities</option>
+                        <option value="uku">UK Unversities</option>
+                        <option value="cof">Coffee</option>
+                        <option value="lus">London Underground Stations</option>
+                        <option value="4pow">4 pics one word</option>
+                        <option value="kin">King's Surnames</option>
+                    </select>
+                    <!-- <div class="choose-your-file-div">
+                        <input type="file" name="myImage" id="file" class="choose-file-button" />
+                        <label for="file">Choose a file</label>
+                    </div> -->
+                    <input type="text" name="clue" placeholder="Give your users a clue" class="new-post-input" id="edit-clue-input">
+                    <input type="text" name="answer" placeholder="Answer" class="new-post-input" id="edit-answer-input">
+                    <button type="submit" class="submit">Edit Post</button>
                 </form>
             </div>
         </div>
