--- a/clue-for-you/views/browse.ejs
+++ b/clue-for-you/views/browse.ejs
@@ -34,11 +34,13 @@
                         <button class="answer-button"
                         name="answer-button" post-answer="<%- post.ans %>">Submit</button>
                     </div>
-                    <p class="clue-class">Stuck? Click <a class='clue-anchor' href="#">here for a clue</a>:</p>
-                    <b class="clue display-clue"><%- post.clue %></b>
-                    <h1 class="correct-header correct-header-display">Correct</h1>
-                    <h1 class="incorrect-header incorrect-header-display">Wrong. Try again.</h1>
-
+                    <div class="harry">
+                            <p class="clue-class">Stuck? Click <a class='clue-anchor' href="#">here for a clue</a>:</p>
+                            <b class="clue display-clue"><%- post.clue %></b>
+                            <h1 class="correct-header correct-header-display"></h1>
+                            <!-- <h1 class="incorrect-header incorrect-header-display">Wrong. Try again.</h1> -->
+                    </div>
+                    
                 </div>
             </div>
             <%
@@ -46,4 +48,4 @@
             %>
         </section>
     </main>
-    <%- include('./footer'); %>
+<%- include('./footer'); %>
